k8s/prod-eu/gateway/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: default-backend
          port: 80
          weight: 1
      filters:
        - responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Credentials
                value: "true"
              - name: Access-Control-Allow-Headers
                value: "*"
              - name: Access-Control-Allow-Methods
                value: GET, PUT, POST, DELETE, OPTIONS
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Cache-Control
                value: no-cache, no-store
              - name: Cross-Origin-Embedder-Policy
                value: unsafe-none
              - name: Cross-Origin-Opener-Policy
                value: unsafe-none
              - name: Cross-Origin-Resource-Policy
                value: cross-origin
              - name: Referrer-Policy
                value: unsafe-url
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Permitted-Cross-Domain-Policies
                value: none
              - name: X-XSS-Protection
                value: "0"
          type: ResponseHeaderModifier
        - type: URLRewrite
          urlRewrite:
            path:
              replaceFullPath: /
              type: ReplaceFullPath
      matches:
        - path:
            type: PathPrefix
            value: /
